# rpcpp_plugins

./: .appveyor.yml  CMakeLists.txt  LICENSE.md  README.md  azure-pipelines.yml  files.cmake  rpplugin_build.cmake  rpplugins_build.cmake
ar_render/: CMakeLists.txt  config.yaml  files.cmake
ar_render/include/rpplugins/ar_render/: ar_composite_stage.hpp  plugin.hpp
ar_render/shader/: ar_composite.inc.glsl  empty_ar_composite.frag.glsl  mono_ar_composite.frag.glsl  stereo_ar_composite.frag.glsl
ar_render/src/: ar_composite_stage.cpp  depthmap_render_stage.cpp  depthmap_render_stage.hpp  plugin.cpp
background2d/: CMakeLists.txt  files.cmake
background2d/include/: background2d_plugin.hpp  background2d_stage.hpp
background2d/include/rpplugins/background2d/: background2d_stage.hpp  plugin.hpp
background2d/resources/: config.yaml
background2d/shader/: background2d.frag.glsl
background2d/src/: background2d_plugin.cpp  background2d_stage.cpp  plugin.cpp
cmake/: FindOpenVR.cmake  FindPackages.cmake  FindRapidJson.cmake
docs/: index.md  openvr.md  openvr_plugin_dev.md
docs/ko_kr/: index.md  openvr.md
flex/: CMakeLists.txt
flex/include/: flex_buffer.hpp  flex_instance_interface.hpp  flex_mapped_buffer.hpp  flex_plugin.hpp
flex/resources/: config.yaml
flex/src/: flex_buffer.cpp  flex_buffer.hpp  flex_plugin.cpp
imgui/: CMakeLists.txt  README.md  config.yaml
imgui/include/rpplugins/imgui/: plugin.hpp
imgui/shader/: imgui.frag.glsl  imgui.vert.glsl
imgui/src/: plugin.cpp
line_renderer/: CMakeLists.txt
line_renderer/config/: config.yaml
line_renderer/include/: line_3d.hpp  line_renderer_plugin.hpp
line_renderer/src/: line_3d_impl.cpp  line_3d_impl.hpp  line_render_stage.cpp  line_render_stage.hpp  plugin.cpp  plugin.hpp
openvr/: CMakeLists.txt  README.md  config.yaml  files.cmake
openvr/docs/: openvr.md
openvr/docs/ko_kr/: openvr.md
openvr/include/: openvr_camera.hpp  openvr_camera_interface.hpp  openvr_plugin.hpp
openvr/include/rpplugins/openvr/: camera_interface.hpp  controller.hpp  plugin.hpp
openvr/shader/: openvr_render.frag.glsl
openvr/src/: config_openvr.cpp  config_openvr.hpp  openvr_camera.cpp  openvr_camera_interface.cpp  openvr_controller.cpp  openvr_plugin.cpp  openvr_render_stage.cpp  openvr_render_stage.hpp
openvr/tools/gui/: CMakeLists.txt
openvr/tools/gui/src/: main.cpp
recording/: CMakeLists.txt  config.yaml  files.cmake
recording/include/rpplugins/recording/: plugin.hpp  recording_stage.hpp
recording/shader/: recording.frag.glsl  recording_as_mono_2darray.frag.glsl  recording_as_mono_3d.frag.glsl  recording_stereo.frag.glsl  show_through.frag.glsl
recording/src/: plugin.cpp  recording_stage.cpp
recording/tools/gui/: CMakeLists.txt
recording/tools/gui/src/: main.cpp
rpeditor_server/: CMakeLists.txt  LICENSE.md  files.cmake
rpeditor_server/include/: api_server_interface.hpp  plugin.hpp  rpeditor_server_plugin.hpp
rpeditor_server/resources/: config.yaml
rpeditor_server/src/: rpeditor_server_plugin.cpp
rpeditor_server/src/restapi/: config.hpp  resolve_message.cpp  resolve_message.hpp  restapi_server.cpp  restapi_server.hpp
rpeditor_server/src/restapi/resources/: common.cpp  common.hpp  geomnode.cpp  material.cpp  nodepath.cpp  showbase.cpp
rpflex/: CMakeLists.txt  files.cmake
rpflex/include/rpflex/: flex_buffer.hpp  instance_interface.hpp  plugin.hpp
rpflex/include/rpflex/utils/: helpers.hpp  shape.hpp  shape_box.hpp  triangle_mesh.hpp
rpflex/src/: plugin.cpp
rpstat/: CMakeLists.txt  README.md  files.cmake
rpstat/include/rpplugins/rpstat/: plugin.hpp
rpstat/src/: actor_window.cpp  actor_window.hpp  anim_control_window.cpp  anim_control_window.hpp  day_manager_window.cpp  day_manager_window.hpp  file_dialog.cpp  file_dialog.hpp  material_window.cpp  material_window.hpp  nodepath_window.cpp  nodepath_window.hpp  plugin.cpp  scenegraph_window.cpp  scenegraph_window.hpp  texture_window.cpp  texture_window.hpp  window_interface.cpp  window_interface.hpp
src/: main.cpp
src/restapi/: config.hpp  resolve_message.cpp  resolve_message.hpp  restapi_server.cpp  restapi_server.hpp
src/restapi/resources/: common.cpp  common.hpp  geomnode.cpp  material.cpp  nodepath.cpp  showbase.cpp
vivesr/: CMakeLists.txt  README.md  config.yaml  files.cmake
vivesr/cmake/: rpplugin_vivesr-macro.cmake
vivesr/include/rpplugins/vivesr/: plugin.hpp  see_through_module.hpp
vivesr/src/: plugin.cpp  see_through_module.cpp
